--- a/uvbot_description/package.xml
+++ b/uvbot_description/package.xml
@@ -7,7 +7,7 @@
 for uvbot_description robot</p>
   </description>
   <author>TODO</author>
-  <maintainer email="TODO@email.com" />
+  <maintainer email="zhonghang@hnu.edu.cn" />
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roslaunch</depend>
